add HTML Description

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>website Kanz</title>
-</head>
-<body>
-  <h1>Kanz Farras Naafi</h1>
-  <p>8A</p>
-  <p>Latihan HTML</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>website Kanz</title>
+  </head>
+  <body>
+    <h1>Kanz Farras Naafi</h1>
+    <p>8A</p>
+    <p>Latihan HTML</p>
+    <p>
+      HTML (HyperText Markup Language) adalah bahasa markup untuk membuat dan
+      menyusun halaman web. HTML membentuk struktur dasar konten seperti teks,
+      gambar, dan tautan. Versi terbarunya, **HTML5**, menambahkan fitur
+      multimedia dan elemen semantik. HTML bekerja bersama CSS (untuk tampilan)
+      dan JavaScript (untuk interaktivitas) dalam pengembangan web.
+    </p>
+  </body>
 </html>
